--- a/style.css
+++ b/style.css
@@ -4,13 +4,27 @@
   scroll-behavior: smooth;
 }
 
+body {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+section {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  min-height: 800px;
+  padding: 100px 20vw;
+}
+
 .nav-link {
   color: #f72585;
 }
 
 #logo {
   font-family: "Dancing Script", cursive;
-  font-size: 25px;
+  font-size: 35px;
   color: #f72585;
 }
 
@@ -45,4 +59,3 @@
   overflow: hidden;
   line-height: 0;
 }
-
